# itanna

./: .env  .gitignore  PLAN.md  README.org  VSCODE-PLAN.md  early-init.el  init.el  install.sh  itanna-quickinstall.sh  pyproject.toml
electrical/: pyproject.toml
electrical/electrical/: __init__.py
electrical/electrical/converter/: __init__.py  buck.py
electrical/electrical/executable/: __init__.py  builder.py
electrical/electrical/utils/: __init__.py  eseries.py  plot.py  prefixed.py
electrical/tests/: test_buck.py  test_eseries.py  test_plot.py  test_prefixed.py
itanna/: __init__.py
itanna/cli/: __init__.py  welcome.py
itanna/emacs/: __init__.py  activate.py  venv.py
modules/: 00-org-babel.el  01-langs.el  02-ee-tools.el  03-keybindings.el  04-itanna-core.el
scripts/: install-vscode-adapter.sh
templates/: buck-calculator.org  hello-executable.org  org-notebook.org  rust-ee-template.org
templates-jupyter/: buck-calculator.ipynb  hello-executable.ipynb  template-ee.ipynb
vscode-itanna/: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json
vscode-itanna/snippets/: python.json
vscode-itanna/src/: commands.ts  extension.ts  snippets.ts  status.ts  templates.ts  testRunner.ts  treeView.ts  venv.ts  welcome.ts
