[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itanna-electrical"
version = "0.1.0"
description = "Electrical Engineering Python modules for the Itanna Emacs distribution"
readme = "README.md"
authors = [
    {name = "Itanna EE"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "prefixed>=0.7",
]

[project.optional-dependencies]
executable = [
    "nuitka>=2.0",
]
gui = [
    "PySide6>=6.5",
]
plot = [
    "matplotlib>=3.7",
]
all = [
    "itanna-electrical[executable,gui,plot]",
]

[project.urls]
Repository = "https://github.com/yourusername/itanna"

[tool.setuptools.packages.find]
where = ["."]
include = ["electrical*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
